G1: assert(!has_undefined_max_size, "Undefined max size");

XMLWordPrintable

    • gc
    • b01
    • generic
    • generic
    • Verified

        The changes for 6941275 (G1: The MemoryPools are incorrectly supported for G1) are tripping over an assert in management.cpp:

        [2010-08-26T10:29:55.78] # Actual: /export/local/common/jdk/baseline/linux-i586/bin/java -client -Xmixed -XX:-PrintVMOptions -XX:+UseG1GC -XX:+StartAttachListener -XX:+IgnoreUnrecognizedVMOptions -XX:+UseCompressedOops -XX:-UseGCOverheadLimit vm.gc.containers.ContainersTest -ms low -ct LinkedHashMap(random(arrays))
        [2010-08-26T10:29:55.78] # To suppress the following error report, specify this argument
        [2010-08-26T10:29:56.94] # after -XX: or in .hotspotrc: SuppressErrorAt=/management.cpp:791
        [2010-08-26T10:29:56.94] #
        [2010-08-26T10:29:56.94] # A fatal error has been detected by the Java Runtime Environment:
        [2010-08-26T10:29:56.94] #
        [2010-08-26T10:29:56.94] # Internal Error (/tmp/jprt/P1/B/214611.jcoomes/source/src/share/vm/services/management.cpp:791), pid=23426, tid=3072813968
        [2010-08-26T10:29:56.94] # assert(!has_undefined_max_size) failed: Undefined max size
        [2010-08-26T10:29:56.94] #
        [2010-08-26T10:29:56.94] # JRE version: 7.0
        [2010-08-26T10:29:56.94] # Java VM: OpenJDK Client VM (19.0-b06-201008252146.jcoomes.6978300-g1-gcthread-fastdebug mixed mode linux-x86 )
        [2010-08-26T10:29:56.94] # An error report file with more information is saved as:
        [2010-08-26T10:29:56.94] # /export/local/37621.JDK7.NIGHTLY.VM+linux-i586_vm_client_mixed_vm.gc.testlist/results/ResultDir/LinkedHashMap_Arrays/hs_err_pid23426.log
        [2010-08-26T10:29:56.94] #
        [2010-08-26T10:29:56.94] # If you would like to submit a bug report, please visit:
        [2010-08-26T10:29:56.94] # http://java.sun.com/webapps/bugreport/crash.jsp
        [2010-08-26T10:29:56.94] #

        It looks as if there are some assumptions in the management code that the max should be defined.

              Assignee:
              Tony Printezis
              Reporter:
              Tony Printezis
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: