6980206: G1: assert(has_undefined_max_size, "Undefined max size");

An assert in the management.cpp is too strong and assumes the max size is always defined on memory pools, even when we don't need to use it.

Reviewed-by: mchung, johnc